--- a/src/Views/TextDiffView.axaml
+++ b/src/Views/TextDiffView.axaml
@@ -17,7 +17,7 @@
                                    BorderThickness="0"
                                    Foreground="{DynamicResource Brush.FG1}"
                                    SecondaryFG="{DynamicResource Brush.FG2}"
-                                   FontFamily="{StaticResource JetBrainsMono}"
+                                   FontFamily="fonts:SourceGit#JetBrains Mono"
                                    FontSize="12"
                                    DiffData="{Binding}"
                                    SyncScrollOffset="{Binding $parent[v:DiffView].DataContext.(vm:DiffContext).SyncScrollOffset, Mode=TwoWay}"/>
@@ -34,7 +34,7 @@
                                        BorderThickness="0"
                                        Foreground="{DynamicResource Brush.FG1}"
                                        SecondaryFG="{DynamicResource Brush.FG2}"
-                                       FontFamily="{StaticResource JetBrainsMono}"
+                                       FontFamily="fonts:SourceGit#JetBrains Mono"
                                        FontSize="12"
                                        DiffData="{Binding}"/>
 
@@ -49,7 +49,7 @@
                                        BorderThickness="0"
                                        Foreground="{DynamicResource Brush.FG1}"
                                        SecondaryFG="{DynamicResource Brush.FG2}"
-                                       FontFamily="{StaticResource JetBrainsMono}"
+                                       FontFamily="fonts:SourceGit#JetBrains Mono"
                                        FontSize="12"
                                        DiffData="{Binding}"/>
       </Grid>
