fix: should not use Active to close a running popup.

--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -282,6 +282,7 @@
                   </StackPanel>
                   <TextBlock HorizontalAlignment="Stretch"
                              TextWrapping="Wrap"
+                             FontSize="12"
                              FontStyle="Italic"
                              Text="{Binding ProgressDescription}"/>
                   <ProgressBar Margin="0,8,0,0"
