--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -346,10 +346,11 @@
       </Grid>
 
       <!-- Left Search Mode -->
-      <Grid Grid.Column="0" RowDefinitions="32,*" IsVisible="{Binding IsSearching}">
+      <Grid Grid.Column="0" RowDefinitions="32,*" IsVisible="{Binding IsSearching}" PropertyChanged="OnSearchCommitPanelPropertyChanged">
         <!-- Search -->
         <Grid Grid.Row="0" Margin="4,2">
           <TextBox Grid.Column="1"
+                   x:Name="txtSearchCommitsBox"
                    Padding="22,0"
                    FontSize="12"
                    Height="24"
